# cad_import

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: rust.yml
doc/: rvm-primitives.drawio
examples/: file_info.rs  info.rs  to_x3d.rs
src/: error.rs  lib.rs  units.rs
src/basic_types/: color.rs  id.rs  mod.rs
src/exporter/: mod.rs  x3d_exporter.rs
src/loader/: loader.rs  loader_off.rs  manager.rs  mod.rs
src/loader/loader_gltf/: accessor_iterator.rs  component.rs  loader_gltf.rs  mod.rs  utils.rs
src/loader/loader_rvm/: cad_data_creator.rs  identifier.rs  identifier_reader.rs  loader_rvm.rs  material.rs  mod.rs  primitive.rs  rvm_parser.rs  test_rvm.rs
src/loader/loader_rvm/tessellate/: cylinder.rs  mesh_builder.rs  mod.rs  polygon.rs  sphere.rs  utils.rs
src/loader/options/: descriptor.rs  enum_value.rs  general_options.rs  loader_options.rs  mod.rs  options.rs  options_group.rs  value.rs
src/loader/resource/: file_resource.rs  memory_resource.rs  mod.rs  resource.rs
src/structure/: cad_data.rs  metadata.rs  mod.rs  units.rs
src/structure/shape/: component.rs  material.rs  mesh.rs  mod.rs  primitives.rs  shape.rs  vertices.rs
src/structure/tree/: mod.rs  node.rs
tools/x3dom_viewer/: index.html
