[package]
name = "cad_import"
version = "1.0.0"
readme = "README.md"
license = "MIT"
authors = ["sraesch"]

description = "A simple library for importing CAD data from different formats into a uniform in-memory structure."
documentation = "https://docs.rs/cad_import/"
repository = "https://github.com/raw-bytes/cad_import"

keywords = ["3D", "CAD", "import", "model", "scene"]
categories = ["data-structures"]

edition = "2021"

[dependencies]
gltf = "1"
quick-error = "2.0"
nalgebra-glm = "0.19"
log = "0.4"
quick-xml = "0.36"
itertools = "0.13"
lazy_static = "1.5"
byteorder = "1.5"

[dev-dependencies]
path-clean = "1.0"
